--- a/r4babs4/week-2/overview.qmd
+++ b/r4babs4/week-2/overview.qmd
@@ -5,44 +5,50 @@ toc: true
 toc-location: right
 ---
 
-This is the first of the three workshops which are specific to the Biomedical sciences strand. The aim of these workshops is to teach you how to analyse the flow cytometry data you will collect in the practicals. In this workshop, we will guide you through the analysis of a sample data set just like the one you will generate. Jillian collected these data in designing this set of practicals. You will learn both how to analyse the data and what your own data should look like. 
+This is the first of the three workshops which are specific to the
+Biomedical sciences strand. The aim of these workshops is to teach you
+how to analyse the flow cytometry data you will collect in the
+practicals. In this workshop, we will guide you through the analysis of
+a sample data set just like the one you will generate. Jillian collected
+these data in designing this set of practicals. You will learn both how
+to analyse the data and what your own data should look like.
 
 ### Learning objectives
 
 The successful student will be able to:
 
-
 -   explain what is in a flow cytometry data set
 
--   import `fcs` files, explain a "flowFrame" and a "flowSet" and access the column 
-    names and data in them
+-   import `fcs` files, explain a "flowFrame" and a "flowSet" and access
+    the column names and data in them
 
--   apply automated quality control to a flowSet with the **`flowAI`** package
+-   apply automated quality control to a flowSet with the **`flowAI`**
+    package
 
--   explain why we use the "logicle" transformation and apply it to appropriate 
-    channels
+-   explain why we use the "logicle" transformation and apply it to
+    appropriate channels
 
--   cast the data into a dataframe to use standard tools for filtering, 
+-   cast the data into a dataframe to use standard tools for filtering,
     summarising and plotting data
 
--   explain the purpose of gating and apply appropriate gates to flow cytometry
-    data
+-   explain the purpose of gating and apply appropriate gates to flow
+    cytometry data
 
--   create appropriate summary statistics and figures to demonstrate the 
-    results of the analysis    
+-   create appropriate summary statistics and figures to demonstrate the
+    results of the analysis
 
 ### Instructions
 
 1.  [Prepare](study_before_workshop.qmd)
 
-    i.  📖 Read what the sample data are, what analysis is needed and what tools we will use.
+    i.  📖 Read what the sample data are, what analysis is needed and
+        what tools we will use.
 
 2.  [Workshop](workshop.qmd)
-    
+
     i.💻 Analyse the sample data set.
 
 3.  [Consolidate](study_after_workshop.qmd)
 
-    i. 💻 Set up your RStudio Project for the analysis of your own data.
-
-
+    i.  💻 Set up your RStudio Project for the analysis of your own
+        data.
