--- a/r4babs4/week-2/study_after_workshop.qmd
+++ b/r4babs4/week-2/study_after_workshop.qmd
@@ -9,14 +9,23 @@ format:
     code-summary: "Answer - don't look until you have tried!"
 ---
 
+🎬 Go through the prior study and workshop again making notes on the 
+data analysis process. Ignore the code, just check you understand the 
+steps conceptually.
 
+🎬 Create a new Project that you will use to analyse your own data and
+which you will submit as your RStudio Project. Populate it with the 
+folders you will need. The Project does not need to be named with your 
+exam number at this stage. The next workshop will cover how to change 
+the name of Project.
 
-🎬 Create a new Project that you will use to analyse your own data and which you will submit as your RStudio Project. Populate it with folders you will need. The Project does not need to be named with your exam number at this stage. The next workshop will cover how to change the name of Project.
+🎬 Make a copy of the R script from the workshop that you can use to
+analyse your own data. Go through the script to tidy it up. You might
+need to:
 
-🎬 Make a copy of the R script from the workshop that you can use to analyse your own data. Go through the script to tidy it up. You might need to:
-
-   -   collect together library statements at the top of the script
-   -   edit your comments for clarity
-   -   rename variables for consistency or clarity
-   -   remove house keeping or exploratory code or mark it for later removal
-   -   restyle code, add code section headers etc
+-   collect together library statements at the top of the script
+-   edit your comments for clarity
+-   rename variables for consistency or clarity
+-   remove house keeping or exploratory code or mark it for later
+    removal
+-   restyle code, add code section headers etc
